gi Spotlight tilgang til kafka i dev og prod
Co-authored-by: Christian Bülow Skovborg <christian.bulow.skovborg@nav.no>
Co-authored-by: Elias Andreassen Thøgersen <elias.andreassen.thogersen@nav.no>
Co-authored-by: Trine Linderud <trine.linderud@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -274,3 +274,6 @@ spec:
         - team: tbd
           application: spill-av-im
           access: readwrite
+        - team: tbd
+          application: spotlight
+          access: readwrite
