--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -235,3 +235,6 @@ spec:
         - team: tbd
           application: spill-av-im
           access: readwrite
+        - team: tbd
+          application: spotlight
+          access: readwrite
