oppretter ny teknisk topic
tanken er å kunne produsere mange meldinger på den topicen uten å hindre øvrige applikasjoner

Co-authored-by: Morten Tholander <morten.tholander@nav.no>
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>

--- a/.github/workflows/topics.yml
+++ b/.github/workflows/topics.yml
@@ -5,28 +5,30 @@ on:
     branches:
     - master
     paths:
-    - 'deploy/topic-avviksvurdering-migreringer-v2-dev.yml'
-    - 'deploy/topic-avviksvurdering-migreringer-v2-prod.yml'
+    - 'deploy/aiven-teknisk-topic-dev.yml'
+    - 'deploy/aiven-teknisk-topic-prod.yml'
 
 jobs:
   deployDev:
     name: apply dev-gcp
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          RESOURCE: deploy/topic-avviksvurdering-migreringer-v2-dev.yml
+          RESOURCE: deploy/aiven-teknisk-topic-dev.yml
 
   deployProd:
     name: apply prod-gcp
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: deploy/topic-avviksvurdering-migreringer-v2-prod.yml
+          RESOURCE: deploy/aiven-teknisk-topic-prod.yml
