--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -57,6 +57,8 @@ spec:
   env:
   - name: KAFKA_RAPID_TOPIC
     value: tbd.rapid.v1
+  - name: KAFKA_EXTRA_TOPIC
+    value: tbd.teknisk.v1
   - name: KAFKA_CONSUMER_GROUP_ID
     value: tbd-spleis-v1
   - name: KAFKA_RESET_POLICY
