Revert "setter reset policy til earliest"
This reverts commit b13afc87c89db9064499746acd7aef922f4b8b54.

--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -62,6 +62,6 @@ spec:
   - name: KAFKA_CONSUMER_GROUP_ID
     value: tbd-spleis-v1
   - name: KAFKA_RESET_POLICY
-    value: EARLIEST
+    value: none
   - name: SEND_FERIEPENGEOPPDRAG
     value: "false"
