--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -11,6 +11,7 @@ env:
 jobs:
   build:
     name: build
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
