Legg til OpenTelemetry autoinstrumentation
https://docs.nais.io/how-to-guides/observability/auto-instrumentation/

--- a/deploy/dev-opprydding.yml
+++ b/deploy/dev-opprydding.yml
@@ -41,6 +41,10 @@ spec:
     pool: nav-dev
   secureLogs:
     enabled: true
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   envFrom:
     - secret: google-sql-helse-spleis-spleis-spleis-opprydding-dev-fe3a79a6
   env:
