--- a/deploy/dev-api.yml
+++ b/deploy/dev-api.yml
@@ -62,6 +62,10 @@ spec:
         - application: spekemat
   secureLogs:
     enabled: true
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   envFrom:
     - secret: google-sql-helse-spleis-spleis-spleis-api-cf4f5c2c
   env:
