--- a/deploy/dev-gc-job.yml
+++ b/deploy/dev-gc-job.yml
@@ -13,6 +13,10 @@ spec:
     pool: nav-dev
   secureLogs:
     enabled: true
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   envFrom:
     - secret: google-sql-helse-spleis
   gcp:
