--- a/deploy/dev-migrate-job.yml
+++ b/deploy/dev-migrate-job.yml
@@ -16,6 +16,10 @@ spec:
     pool: nav-dev
   secureLogs:
     enabled: true
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   envFrom:
     - secret: google-sql-helse-spleis-spleis-spleis-avstemming-038f9535
     - secret: google-sql-helse-spleis-spleis-spleis-migrate-70ddf3c6
