--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -48,6 +48,10 @@ spec:
               - name: spleis-migrate
   secureLogs:
     enabled: true
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   env:
   - name: KAFKA_RAPID_TOPIC
     value: tbd.rapid.v1
