--- a/deploy/prod-avstemming-job.yml
+++ b/deploy/prod-avstemming-job.yml
@@ -14,6 +14,10 @@ spec:
     pool: nav-prod
   secureLogs:
     enabled: true
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   envFrom:
     - secret: google-sql-spleis-spleis-spleis-avstemming-c09f6283
   gcp:
