--- a/deploy/prod-gc-job.yml
+++ b/deploy/prod-gc-job.yml
@@ -13,6 +13,10 @@ spec:
     pool: nav-prod
   secureLogs:
     enabled: true
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   envFrom:
     - secret: google-sql-spleis
   gcp:
