sett limits og requests for jobs
NaisJobs har en default-cpu-limit på 500m og migreringene bruker kjempelang tid om vi ikke setter limit selv

--- a/deploy/prod-migrate-job.yml
+++ b/deploy/prod-migrate-job.yml
@@ -12,6 +12,9 @@ spec:
   resources:
     limits:
       memory: 4096Mi
+      cpu: 4000m
+    requests:
+      cpu: 200m
   kafka:
     pool: nav-prod
   secureLogs:
