Legger til andre ytelser på tidslinjen når vi får vite om dem
Foreløpig bare foreldrepenger og bak toggle

Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>
Co-authored-by: Simen Ullern <simen.ullern@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -59,3 +59,5 @@ spec:
     value: "true"
   - name: OPPDATERTE_FORESPOERSLER
     value: "true"
+  - name: ANDRE_YTELSER_UNDERVEIS
+    value: "true"
