forbereder migrering til spre-styringsinfo
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Øyvind Hagen <oyvind.hagen@nav.no>

--- a/deploy/aiven-teknisk-topic-prod.yml
+++ b/deploy/aiven-teknisk-topic-prod.yml
@@ -19,3 +19,9 @@ spec:
         - team: tbd
           application: spleis
           access: readwrite
+        - team: tbd
+          application: spleis-migrate
+          access: write
+        - team: tbd
+          application: spre-styringsinfo
+          access: read
