gi sparkel-stoppknapp tilgang til kafka i dev og prod
Co-authored-by: Trine Linderud <trine.linderud@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -271,3 +271,6 @@ spec:
         - team: tbd
           application: spotlight
           access: readwrite
+        - team: tbd
+          application: sparkel-stoppknapp
+          access: readwrite
