--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -232,3 +232,6 @@ spec:
         - team: tbd
           application: spotlight
           access: readwrite
+        - team: tbd
+          application: sparkel-stoppknapp
+          access: readwrite
