--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -62,15 +62,15 @@ jobs:
           RESOURCE: deploy/dev.yml,deploy/db-dev.yml
           IMAGE: ${{ needs.build.outputs.image }}
 
-  deployProd:
-    name: deploy to prod
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: nais/deploy/actions/deploy@v2
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-gcp
-          RESOURCE: deploy/prod.yml,deploy/hpa.yml,deploy/db-prod.yml
-          IMAGE: ${{ needs.build.outputs.image }}
+#  deployProd:
+#    name: deploy to prod
+#    needs: build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: nais/deploy/actions/deploy@v2
+#        env:
+#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+#          CLUSTER: prod-gcp
+#          RESOURCE: deploy/prod.yml,deploy/hpa.yml,deploy/db-prod.yml
+#          IMAGE: ${{ needs.build.outputs.image }}
