deployer til prod igjen

--- a/.github/workflows/spleis-api.yml
+++ b/.github/workflows/spleis-api.yml
@@ -64,15 +64,15 @@ jobs:
           RESOURCE: deploy/dev-api.yml
           IMAGE: ${{ needs.build.outputs.image }}
 
-#  deployProd:
-#    name: deploy to prod
-#    needs: build
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: nais/deploy/actions/deploy@v2
-#        env:
-#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-#          CLUSTER: prod-gcp
-#          RESOURCE: deploy/prod-api.yml
-#          IMAGE: ${{ needs.build.outputs.image }}
+  deployProd:
+    name: deploy to prod
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: nais/deploy/actions/deploy@v2
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-gcp
+          RESOURCE: deploy/prod-api.yml
+          IMAGE: ${{ needs.build.outputs.image }}
