--- a/.github/workflows/spleis-opprydding-dev.yml
+++ b/.github/workflows/spleis-opprydding-dev.yml
@@ -8,6 +8,7 @@ on:
       - 'Dockerfile-opprydding-dev'
       - 'sykepenger-opprydding-dev/**'
       - 'build.gradle.kts'
+      - 'settings.gradle.kts'
       - '.github/workflows/spleis-opprydding-dev.yml'
       - 'deploy/dev-opprydding.yml'
 
