kan annullere i hvilken som helst rekkefølge
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -59,3 +59,5 @@ spec:
     value: "true"
   - name: SEND_FERIEPENGEOPPDRAG
     value: "true"
+  - name: FORBY_ANNULLERINGER_TIDLIGERE_PERIODER
+    value: "false"
