--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -65,3 +65,5 @@ spec:
     value: none
   - name: SEND_FERIEPENGEOPPDRAG
     value: "false"
+  - name: FORBY_ANNULLERINGER_TIDLIGERE_PERIODER
+    value: "true"
