--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -66,4 +66,4 @@ spec:
   - name: SEND_FERIEPENGEOPPDRAG
     value: "false"
   - name: FORBY_ANNULLERINGER_TIDLIGERE_PERIODER
-    value: "true"
+    value: "false"
