migrerer -alle- behandlinger til spesialist 🤞
Co-authored-by: Simen Ullern <simen.ullern@nav.no>
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>
Co-authored-by: Christian Bülow Skovborg <christian.bulow.skovborg@nav.no>
Co-authored-by: Amalie Erdal Mansåker <amalie.erdal.mansaker@nav.no>
Co-authored-by: Kjetil JD <kjetil.jorgensen-dahl@nav.no>
Co-authored-by: Øyvind Hagen <oyvind.hagen@nav.no>

--- a/deploy/aiven-teknisk-topic-prod.yml
+++ b/deploy/aiven-teknisk-topic-prod.yml
@@ -25,3 +25,6 @@ spec:
         - team: tbd
           application: spre-styringsinfo
           access: read
+        - team: tbd
+          application: spesialist-migrering
+          access: readwrite
