Sørger for at spleis-api bygges ved endringer i utbetalings-modul
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Simen Ullern <simen.ullern@nav.no>
Co-authored-by: Sivert Lunsæter <sivert.frang.lunseter@nav.no>

--- a/.github/workflows/spleis-api.yml
+++ b/.github/workflows/spleis-api.yml
@@ -12,6 +12,7 @@ on:
     - 'sykepenger-primitiver-dto/**'
     - 'sykepenger-serde/**'
     - 'sykepenger-utbetaling-dto/**'
+    - 'sykepenger-utbetaling/**'
     - 'build.gradle.kts'
     - 'settings.gradle.kts'
     - '.github/workflows/**'
