--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -233,6 +233,9 @@ spec:
           application: speaker-backend
           access: readwrite
         - team: tbd
+          application: speaker-endringer-formidler
+          access: readwrite
+        - team: tbd
           application: sondre-halvorsen
           access: read
         - team: tbd
