--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -12,6 +12,8 @@ jobs:
   build:
     name: build
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
