--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -274,3 +274,6 @@ spec:
         - team: tbd
           application: sparkel-stoppknapp
           access: readwrite
+        - team: tbd
+          application: sparkel-representasjon
+          access: readwrite
