--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -235,3 +235,6 @@ spec:
         - team: tbd
           application: sparkel-stoppknapp
           access: readwrite
+        - team: tbd
+          application: sparkel-representasjon
+          access: readwrite
