Kanskje matchers ikke kan ha bindestreker?
Co-authored-by: Sivert Lunsæter <sivert.frang.lunseter@nav.no>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,6 +13,8 @@ on:
       - 'README.md'
       - 'LICENSE'
       - 'CODEOWNERS'
+      - '.github/workflows/alerts.yml'
+      - 'deploy/prod-alertmanagerconfig.yml'
     branches:
       - master
 
