Tror vi må end'e rangen 🫠
Co-authored-by: Simen Ullern <simen.ullern@nav.no>
Co-authored-by: Sivert Lunsæter <sivert.frang.lunseter@nav.no>

--- a/deploy/prod-alertmanagerconfig.yml
+++ b/deploy/prod-alertmanagerconfig.yml
@@ -23,6 +23,7 @@ spec:
             {{ range .Alerts -}}
             *Beskrivelse:* {{ .Annotations.beskrivelse }}{{ "\n" }}
             *Detaljer:* {{ .Annotations.detaljer }}
+            {{ end }}
           color: |-
             {{ if eq .Status "firing" -}}
               {{ if eq .CommonLabels.severity "warning" -}}
