Ikke send resolved melding på INFO Slack Alerts. Sett interval til 30m. Begge i AlertManagerConfig
Co-authored-by: David Steinsland <david.steinsland@nav.no>
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>
Co-authored-by: Erik M. Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Amalie Erdal Mansåker <amalie.erdal.mansaker@nav.no>

--- a/deploy/prod-alertmanagerconfig.yml
+++ b/deploy/prod-alertmanagerconfig.yml
@@ -16,7 +16,12 @@ spec:
           channel: "#team-spleiselaget-alerts"
           iconEmoji: ":viggo:"
           username: "viggo"
-          sendResolved: true
+          sendResolved: |-
+            {{ if eq .CommonLabels.severity "info" }}
+              false
+            {{ else }}
+              true
+            {{ end }}
           title: |-
             [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ .CommonLabels.alertname }}
           text: >-
@@ -56,4 +61,4 @@ spec:
     groupInterval: 10s
     groupWait: 5s
     receiver: team-spleiselaget-alerts-receiver
-    repeatInterval: 2m
+    repeatInterval: 30m
