Prøv not eq i sendResolved.
Co-authored-by: David Steinsland <david.steinsland@nav.no>
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>
Co-authored-by: Erik M. Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Amalie Erdal Mansåker <amalie.erdal.mansaker@nav.no>

--- a/deploy/prod-alertmanagerconfig.yml
+++ b/deploy/prod-alertmanagerconfig.yml
@@ -16,12 +16,7 @@ spec:
           channel: "#team-spleiselaget-alerts"
           iconEmoji: ":viggo:"
           username: "viggo"
-          sendResolved: |-
-            {{ if eq .CommonLabels.severity "info" }}
-              false
-            {{ else }}
-              true
-            {{ end }}
+          sendResolved: {{ not eq .CommonLabels.severity "info" }}
           title: |-
             [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ .CommonLabels.alertname }}
           text: >-
