Print PAYLOAD i templated resources i alert GHA

--- a/.github/workflows/alerts.yml
+++ b/.github/workflows/alerts.yml
@@ -17,3 +17,4 @@ jobs:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
           RESOURCE: deploy/prod-alertmanagerconfig.yml
+          PRINT_PAYLOAD: true
