--- a/.github/workflows/spleis-api.yml
+++ b/.github/workflows/spleis-api.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           team: tbd
           image_suffix: api
+          dockerfile: Dockerfile
           docker_context: sykepenger-api
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
