Må sette dockerfile-feltet for spleis-jobs også
ref e89a41c

--- a/.github/workflows/spleis-jobs.yml
+++ b/.github/workflows/spleis-jobs.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           team: tbd
           image_suffix: jobs
+          dockerfile: Dockerfile
           docker_context: jobs
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
