Legger til spregulering ➕
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>

--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -277,3 +277,6 @@ spec:
         - team: tbd
           application: sparkel-representasjon
           access: readwrite
+        - team: tbd
+          application: spregulering
+          access: readwrite
