kan spytte ut grunnbeløp fra siste vilkårsgrunnag
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>

--- a/deploy/aiven-teknisk-topic-dev.yml
+++ b/deploy/aiven-teknisk-topic-dev.yml
@@ -19,3 +19,6 @@ spec:
         - team: tbd
           application: spleis
           access: readwrite
+        - team: tbd
+          application: spregulering
+          access: read
