--- a/.github/workflows/manuell-jobb.yml
+++ b/.github/workflows/manuell-jobb.yml
@@ -1,8 +1,10 @@
+name: Starte en jobb manuelt
+
 on:
   workflow_dispatch:
     inputs:
-      sha:
-        description: 'Hvilen SHA skal jobben kjøre på? Hvis tom kjører den på siste versjon'
+      image_version:
+        description: 'Hvilen versjon av imaget skal jobben kjøre?'
         required: false
         type: string
       navn:
@@ -26,12 +28,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "Job sha: $JOB_SHA"
+          echo "Job image version: $JOB_IMAGE_VERSION"
           echo "Job navn: $JOB_NAVN"
           echo "Job id: $JOB_ID"
           echo "Job environment: $JOB_ENVIRONMENT"
         env:
-          JOB_SHA: ${{ inputs.sha || github.sha }}
+          JOB_IMAGE_VERSION: ${{ inputs.image_version }}
           JOB_NAVN: ${{ inputs.navn }}
           JOB_ID: ${{ inputs.id }}
           JOB_ENVIRONMENT: ${{ inputs.environment }}
+  deploy:
+    name: Kjør jobben
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: nais/deploy/actions/deploy@v2
+        env:
+          CLUSTER: ${{ inputs.environment }}
+          RESOURCE: deploy/manuell-jobb.yml
+          IMAGE: europe-north1-docker.pkg.dev/nais-management-233d/tbd/helse-spleis-jobs:${{ inputs.image_version }}
+          VARS: deploy/manuell-jobb-${{ inputs.environment }}.json
+          VAR: job_name=${{ inputs.navn }},job_id=${{ inputs.id }}
