Legger litt manglende rettigheter
Co-authored-by: Morten Tholander <morten.tholander@nav.no>
Co-authored-by: Simen Ullern <simen.ullern@nav.no>
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>

--- a/.github/workflows/manuell-jobb.yml
+++ b/.github/workflows/manuell-jobb.yml
@@ -40,6 +40,8 @@ jobs:
   deploy:
     name: Kjør jobben
     runs-on: ubuntu-latest
+    permissions:
+      id-token: read
     steps:
       - uses: actions/checkout@v4
       - uses: nais/deploy/actions/deploy@v2
