Forsøker å logge payload til deploy
Co-authored-by: Morten Tholander <morten.tholander@nav.no>
Co-authored-by: Simen Ullern <simen.ullern@nav.no>
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>

--- a/.github/workflows/manuell-jobb.yml
+++ b/.github/workflows/manuell-jobb.yml
@@ -51,3 +51,4 @@ jobs:
           IMAGE: europe-north1-docker.pkg.dev/nais-management-233d/tbd/helse-spleis-jobs:${{ inputs.image_version }}
           VARS: deploy/manuell-jobb-${{ inputs.environment }}.json
           VAR: job_name=${{ inputs.navn }},job_id=${{ inputs.id }}
+          PRINT_PAYLOAD: true
