Det var en ( for mye og en { for lite
Co-authored-by: Morten Tholander <morten.tholander@nav.no>
Co-authored-by: Simen Ullern <simen.ullern@nav.no>
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>
Co-authored-by: Christina Grønhaug <christina.gronhaug@nav.no>

--- a/deploy/manuell-jobb.yml
+++ b/deploy/manuell-jobb.yml
@@ -16,7 +16,7 @@ spec:
     requests:
       cpu: 200m
   kafka:
-    pool: {( kafka_pool }}
+    pool: {{ kafka_pool }}
   secureLogs:
     enabled: true
   envFrom:
