spleis-migrate må jo få lov å skrive til topicet..
Co-authored-by: Simen Ullern <simen.ullern@nav.no>
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>

--- a/deploy/aiven-teknisk-topic-dev.yml
+++ b/deploy/aiven-teknisk-topic-dev.yml
@@ -20,5 +20,8 @@ spec:
           application: spleis
           access: readwrite
         - team: tbd
+          application: spleis-migrate
+          access: write
+        - team: tbd
           application: spregulering
           access: read
