Merger ikke egenmeldinger fra søknad inn i sykdomstidslinjen (bak toggle)
Co-authored-by: David Steinsland <david.steinsland@nav.no>
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Sivert Frang Lunsæter <Sivert.Frang.Lunseter@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -60,3 +60,5 @@ spec:
     value: "true"
   - name: TILKOMMEN_INNTEKT
     value: "true"
+  - name: EGENMELDING_STREKKER_IKKE_SYKDOMSTIDSLINJE
+    value: "false"
