Det vi til nå har kalt tilkommen inntekt renames til tilkommen arbeidsgiver
Tilkommen inntekt som vi skal jobbe med nå betyr "tilkommen ghost"

Co-authored-by: David Steinsland <david@davidsteinsland.net>
Co-authored-by: Christina Grønhaug <christina.gronhaug@nav.no>
Co-authored-by: Amalie Mansåker <amalie.erdal.mansaker@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -58,7 +58,7 @@ spec:
     value: earliest
   - name: IDENTBYTTE
     value: "true"
-  - name: TILKOMMEN_INNTEKT
+  - name: TILKOMMEN_ARBEIDSGIVER
     value: "true"
   - name: EGENMELDING_STREKKER_IKKE_SYKDOMSTIDSLINJE
     value: "false"
