Skrur på toggle om å ikke strekke sykdomstidlinje i pga egenmeldinger i dev
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -61,4 +61,4 @@ spec:
   - name: TILKOMMEN_ARBEIDSGIVER
     value: "true"
   - name: EGENMELDING_STREKKER_IKKE_SYKDOMSTIDSLINJE
-    value: "false"
+    value: "true"
