--- a/.github/workflows/spleis-api.yml
+++ b/.github/workflows/spleis-api.yml
@@ -6,6 +6,7 @@ on:
     - master
     paths:
     - 'sykepenger-api/**'
+    - 'sykepenger-api-dto/**'
     - 'sykepenger-model/**'
     - 'sykepenger-aktivitetslogg-dto/**'
     - 'sykepenger-model-dto/**'
