Sender ut behov om skatteinntekter for periode som har ventet lenger enn tre måneder på IM
Co-authored-by: David Steinsland <david.steinsland@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -60,3 +60,5 @@ spec:
     value: "true"
   - name: TILKOMMEN_ARBEIDSGIVER
     value: "true"
+  - name: INNTEKTSMELDING_SOM_IKKEKOMMER
+    value: "true"
