Gir spre-sykmeldt tilgang til rapid
Co-authored-by: Simen Ullern <simen.ullern@nav.no>
Co-authored-by: Vemund Strøm <vemund.strom@nav.no>

--- a/deploy/aiven-prod.yml
+++ b/deploy/aiven-prod.yml
@@ -241,3 +241,6 @@ spec:
         - team: tbd
           application: spregulering
           access: readwrite
+        - team: tbd
+          application: spre-sykmeldt
+          access: readwrite
