--- a/deploy/aiven-dev.yml
+++ b/deploy/aiven-dev.yml
@@ -280,3 +280,6 @@ spec:
         - team: tbd
           application: spregulering
           access: readwrite
+        - team: tbd
+          application: spre-sykmeldt
+          access: readwrite
