Is this of any help?? 😭

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -50,6 +50,8 @@ jobs:
           docker_context: sykepenger-mediators
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+        env:
+          TRIVY_JAVA_DB_REPOSITORY: "public.ecr.aws/aquasecurity/trivy-java-db:1"
     outputs:
       image: ${{ steps.docker-build-push.outputs.image }}
 
