Tillater ikke tilkommen arbeidsgiver i dev
Potensiell forvirring bare at det kommer varsel om tilkommen inntekt

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -59,6 +59,6 @@ spec:
   - name: IDENTBYTTE
     value: "true"
   - name: TILKOMMEN_ARBEIDSGIVER
-    value: "true"
+    value: "false"
   - name: INNTEKTSMELDING_SOM_IKKEKOMMER
     value: "true"
